permissions for front end(vue casl), v-if for edit(invisible if you don't have permissions), auth.js bugfix and cleanup

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -790,6 +790,9 @@ select {
 .cursor-default {
   cursor: default;
 }
+.cursor-pointer {
+  cursor: pointer;
+}
 .select-none {
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -804,6 +807,9 @@ select {
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.flex-row {
+  flex-direction: row;
 }
 .flex-col {
   flex-direction: column;
